ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/Tier_Movement_Setup__c.object-meta.xml
<CustomObject>
    <description>This object holds the configuration for the Account Tier Movement for IKOROOFPRO Loyalty Project.</description>
    <label>Tier Movement Setup</label>
    <nameField>
        <displayFormat>TMS - {0}</displayFormat>
        <label>Tier Movement Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Movement Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>