ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>