ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Simulation__c.field-meta.xml
<CustomField>
    <fullName>Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simulation</label>
    <type>Checkbox</type>
</CustomField>