ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Tier_Advancement_Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_Advancement_Invoice_Year__c</fullName>
    <label>Tier Advancement Invoice Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>