ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Tier_Advancement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tier_Advancement_Start_Date__c</fullName>
    <description>This is the start date of Tier Advancement Process.</description>
    <label>Tier Advancement Start Date</label>
    <type>Date</type>
</CustomField>