ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Tier_Maintenance_Descend_Date__c.field-meta.xml
<CustomField>
    <fullName>Tier_Maintenance_Descend_Date__c</fullName>
    <description>This is the date to run the Tier Maintenance and Descend Process.</description>
    <label>Tier Maintenance/Descend Date</label>
    <type>Date</type>
</CustomField>