ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier_Movement_Setup__c/fields/Tier_Maintenance_Descend_Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_Maintenance_Descend_Invoice_Year__c</fullName>
    <description>This is the year for which we have to run Tier Maintain/Descend process.</description>
    <label>Tier Maintenance/Descend Invoice Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>